--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "dependencies": {
-    "gatsby": "^2.23.12",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "gatsby": "^2.31.1",
     "gatsby-image": "^2.4.9",
+    "gatsby-plugin-emotion": "^5.3.0",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sass": "^2.3.7",
     "gatsby-plugin-sharp": "^2.6.14",
