--- a/package.json
+++ b/package.json
@@ -16,12 +16,8 @@
     "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "dependencies": {
-    "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.4.9",
-    "gatsby-plugin-emotion": "^5.3.0",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sass": "^2.3.7",
     "gatsby-plugin-sharp": "^2.6.14",
@@ -40,7 +36,15 @@
     "webpack": "^4.43.0"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "babel-eslint": "^10.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "prettier": "^2.2.1"
   },
   "keywords": [
     "gatsby",
