--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sass": "^2.3.7",
     "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-theme-ui": "^0.3.5",
     "gatsby-remark-images": "^3.3.14",
     "gatsby-remark-normalize-paths": "^1.0.0",
     "gatsby-remark-relative-images": "^0.3.0",
@@ -33,6 +34,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "theme-ui": "^0.3.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0"
   },
