added product template and styling

--- a/config.json
+++ b/config.json
@@ -3,5 +3,8 @@
   "description": "A solution by Jaco Kotzee",
   "repository_url": "https://github.com/jakwakwa/bej-jamshop",
   "lang": "en",
-  "author": "Jaco Kotzee"
+  "author": "Jaco Kotzee",
+  "about": "uh",
+  "contact": "jaco@doodlesdigital.co.za",
+  "primaryColor": "#fff"
 }
