--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "gatsby build",
     "dev": "gatsby develop -o",
     "develop": "yarn dev",
-    "format": "prettier --write \"src/**/*.js\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "yarn dev",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
@@ -47,7 +47,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-standard": "^5.0.0",
-    "prettier": "^2.2.1"
+    "prettier": "2.2.1"
   },
   "keywords": [
     "gatsby",
