--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-plugin-theme-ui": "^0.3.5",
     "gatsby-remark-images": "^3.3.14",
@@ -28,10 +30,13 @@
     "gatsby-transformer-remark": "^2.8.20",
     "gatsby-transformer-sharp": "^2.5.7",
     "gatsby-transformer-yaml": "^2.4.6",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "sass-loader": "^10.1.1",
+    "swiper": "^6.4.10",
     "theme-ui": "^0.3.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0"
