--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.4.9",
+    "gatsby-plugin-nprogress": "^2.10.0",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-sharp": "^2.6.14",
@@ -30,6 +31,7 @@
     "gatsby-transformer-sharp": "^2.5.7",
     "gatsby-transformer-yaml": "^2.4.6",
     "node-sass": "^5.0.0",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
