--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "forestry-preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.4",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.4.9",
-    "gatsby-plugin-nprogress": "^2.10.0",
+    "gatsby-plugin-emotion": "^5.4.0",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-sharp": "^2.6.14",
@@ -31,7 +32,6 @@
     "gatsby-transformer-sharp": "^2.5.7",
     "gatsby-transformer-yaml": "^2.4.6",
     "node-sass": "^5.0.0",
-    "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
