Clean up minor code issues and faulty imports

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foresry-starter-blog-gatsby",
+  "name": "Bejama Jamshop - Solution by Jaco Kotzee",
   "private": false,
   "description": "Jaco's Jamshop Solution",
   "license": "MIT",
