--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bejama Jamshop - Solution by Jaco Kotzee",
+  "name": "jamshop_jaco",
   "private": false,
   "description": "Jaco's Jamshop Solution",
   "license": "MIT",
