--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -2,36 +2,36 @@
 new_page_extension: md
 auto_deploy: false
 admin_path: "/static/admin"
-webhook_url: 
+webhook_url:
 sections:
-- type: directory
-  path: content/products
-  label: Product Page
-  create: all
-  match: "**/*"
-  new_doc_ext: md
-- type: heading
-  label: Content
-- type: document
-  path: content/data/authors.yaml
-  label: Author List
-- type: document
-  path: content/data/info.json
-  label: Info Page
-- type: heading
-  label: General Config
-- type: document
-  path: config.json
-  label: Site Info
+  - type: directory
+    path: content/products
+    label: Product Page
+    create: all
+    match: "**/*"
+    new_doc_ext: md
+  - type: heading
+    label: Content
+  - type: document
+    path: content/data/authors.yaml
+    label: Author List
+  - type: document
+    path: content/data/info.json
+    label: Info Page
+  - type: heading
+    label: General Config
+  - type: document
+    path: config.json
+    label: Site Info
 upload_dir: content/images
 public_path: "/content/images"
-front_matter_path: ''
+front_matter_path: ""
 use_front_matter_path: false
 file_template: ":filename:"
 build:
   preview_output_directory: public
   install_dependencies_command: yarn install
-  preview_docker_image: forestryio/node:12
+  preview_docker_image: node:10
   mount_path: "/srv"
   working_dir: "/srv/public"
-  instant_preview_command: yarn dev
+  instant_preview_command: yarn forestry-preview
