--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -4,14 +4,16 @@ auto_deploy: false
 admin_path: ""
 webhook_url:
 sections:
-  - type: directory
-    path: content/products
-    label: Product Page
-    create: all
-    match: "**/*"
-    new_doc_ext: md
   - type: heading
     label: Content
+  - type: directory
+    path: content/posts
+    label: Blog Posts
+    create: documents
+    match: "**/*"
+    new_doc_ext: md
+    templates:
+      - blog-post
   - type: document
     path: content/data/authors.yaml
     label: Author List
